test/corpus/basics.txt
======================
String literal
======================

{{ 'Hello' }}

---

(template
  (content)
  (output_directive (string))
  (content)
)

======================
Number literal
======================

{{ 10 }}

---

(template
  (content)
  (output_directive (number))
  (content)
)

======================
Boolean literal
======================

{{ true }}

---

(template
  (content)
  (output_directive (boolean))
  (content)
)

======================
Identifier with fields
======================

{{ page.section.title }}

---

(template
  (content)
  (output_directive
    (selector_expression
      operand: (identifier)
      field: (identifier)
      field: (identifier)
    )
  )
  (content)
)

======================
Identifier
======================

{{ page }}

---

(template
  (content)
  (output_directive (identifier))
  (content)
)

======================
Assign
======================

{% assign foo = "FOO" %}

---

(template
  (content)
  (assign_directive
    (assignment_expression
      left: (identifier)
      right: (string)
    )
  )
  (content)
)


======================
Chain
======================

{{ username | append: ", welcome to LiquidJS!" | capitalize }}

---

(template
  (content)
  (output_directive
    (identifier)
    (filter_expression
      name: (identifier)
      parameter: (string)
    )
    (filter_expression
      name: (identifier)
    )
  )
  (content)
)
