test/corpus/core_template_constructs.txt
========================
Include tag (deprecated)
========================

{% include 'hello.liquid' %}

---

(template
  (content)
  (include_directive file: (string))
  (content)
)

========================
Render tag
========================

{% render 'hello.liquid' %}

---

(template
  (content)
  (render_directive file: (string))
  (content)
)

========================
for loop
========================

{% for item in sequence %}
  <li>{{item}}</li>
{% endfor %}

---

(template
  (content)
  (for_block
    (for_directive
      left: (identifier)
      right: (identifier)
    )
    (content)
    (output_directive (identifier))
    (content)
    (endfor_directive)
  )
  (content)
)
